[package]
name = "piper-plus-python"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Python bindings for Piper Plus TTS inference"
publish = false

[lib]
name = "piper_plus"
crate-type = ["cdylib"]

[dependencies]
piper_core = { package = "piper-plus", path = "../piper-core", version = "0.1.0" }
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"

[features]
default = []
japanese = ["piper_core/japanese"]
naist-jdic = ["piper_core/naist-jdic"]

[lints.rust]
# PyO3 v0.22 #[pymethods] macro generates unsafe calls without explicit
# unsafe blocks, which is an error in Rust 2024 edition. Allow until PyO3 0.23+.
unsafe_op_in_unsafe_fn = "allow"

[lints.clippy]
# PyO3 #[pymethods] macro generates code that triggers useless_conversion
# when map_err(piper_err_to_pyerr) is used for custom exception mapping.
useless_conversion = "allow"

# Part of the piper-plus workspace (../Cargo.toml)
