[package]
name = "piper-plus-python"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Python bindings for Piper Plus TTS inference"
publish = false

[lib]
name = "piper_plus"
crate-type = ["cdylib"]

[dependencies]
# NOTE: pyo3's `extension-module` feature is *not* enabled here.
# It is added by maturin via `pyproject.toml`'s
# `[tool.maturin] features = ["pyo3/extension-module"]` for the wheel
# build.  Keeping it out of the default dependency line lets `cargo test`
# link against libpython directly via the `auto-initialize` dev-dependency
# feature without colliding with the cdylib's "Python is the host" mode.
piper_core = { package = "piper-plus", path = "../piper-core", version = "0.5.0", features = ["naist-jdic", "onnx"] }
pyo3 = { version = "0.24" }
numpy = "0.24"

# Dev deps: enable auto-initialize so unit tests can acquire the GIL with
# Python::with_gil without an external Python embedding setup.  This pulls
# in the libpython runtime only for the `cargo test` binary; the wheel
# build still receives `extension-module` via maturin (see comment above).
[dev-dependencies]
pyo3 = { version = "0.24", features = ["auto-initialize"] }

[features]
default = []
japanese = ["piper_core/japanese"]
naist-jdic = ["piper_core/naist-jdic"]

[lints.clippy]
# PyO3 #[pymethods] macro generates code that triggers useless_conversion
# when map_err(piper_err_to_pyerr) is used for custom exception mapping.
# Note: Cargo の制約で `[lints] workspace = true` と `[lints.clippy]`
# override は同居できない (cannot override `workspace.lints` in `lints`)。
# piper-python はこの override を維持する必要があるため、workspace lints
# 継承を取り下げ、必要な lint は将来 inline で個別に enable する。
useless_conversion = "allow"

# Part of the piper-plus workspace (../Cargo.toml)
