[package]
name = "piper-plus-g2p-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

# Fuzz harness for piper-plus-g2p.
#
# Targets:
#   - fuzz_ssml         : SsmlParser::parse / is_ssml — XML parser, regex fallback
#   - fuzz_text_splitter: piper_core::text_splitter::split_sentences — char-boundary edge cases
#
# Usage (requires nightly):
#   rustup toolchain install nightly
#   cargo +nightly fuzz run fuzz_ssml -- -max_total_time=60
#   cargo +nightly fuzz run fuzz_text_splitter -- -max_total_time=60
#
# CI (.github/workflows/fuzz-smoke.yml) runs a 60-second smoke per target on PRs
# touching the SSML / text_splitter sources. Crashes uploaded as artifacts.

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
piper-plus-g2p = { path = ".." }
# NOTE: the crate at src/rust/piper-core is published as `piper-plus`, not
# `piper-core`. The directory name is historical; the package name is the
# canonical identifier for `cargo` dependency resolution. Aliasing back to
# `piper_core` in the rustc namespace so fuzz_targets/*.rs can keep their
# existing `use piper_core::...` paths.
piper_core = { package = "piper-plus", path = "../../piper-core", default-features = false }

[[bin]]
name = "fuzz_ssml"
path = "fuzz_targets/fuzz_ssml.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_text_splitter"
path = "fuzz_targets/fuzz_text_splitter.rs"
test = false
doc = false
bench = false

# cargo-fuzz needs its own workspace root so it does NOT inherit the
# parent `[workspace]` (which would conflict with `members` discovery).
[workspace]
